# neo-c

./: 01init.nc  03insert_mode.nc  1  10edit.nc  14dot.nc  15filer.nc  18vvisual.nc  Makefile.in  README.md  TODO  a  a.c  a.cpp  a.nc  a.rb  a.txt  aaa  all_build.sh  b.c  c-neo-c  conf18532  conf19512  conf9433  conf9938  configure  configure.in  debug_all_build.sh  download_to_client.sh  home_all_build.sh  neo-c-string.nc  neo-c-string2.nc  neo-c-wstring.nc  neo-c.h  neo-c.h.out  neo-c.nc  neo-c.nc.tmp  neo-c.out  tags  update_neo_c.sh  upload_to_server.sh  (+2 more)
autom4te.cache/: output.0  requests  traces.0
ayataka/: AAA  Makefile.in  README.md  a.c  config.h.in  configure  configure.in
clover3/: Makefile  Makefile.in  README.md  TODO  a  a.bc  a.ll  a.nc  aaa  config.h  configure  configure.in  memleak_debug.txt  neo-c.h.out
code/: .HelloWorld.nc.swp  External.nc  External.nc.tmp  HelloWorld.nc  HelloWorld.nc.tmp  HelloWorld.out  HelloWorld10  HelloWorld10-5  HelloWorld10-5.nc  HelloWorld10-6  HelloWorld10-6-2.nc  HelloWorld10-6.nc  HelloWorld10-7  HelloWorld10-7.nc  HelloWorld10.nc  HelloWorld2  HelloWorld2.nc  HelloWorld2.nc.tmp  HelloWorld3  HelloWorld3.nc  HelloWorld3.nc.tmp  HelloWorld4  HelloWorld4.nc  HelloWorld4.nc.tmp  HelloWorld5.h  HelloWorld5.nc  HelloWorld5.nc.tmp  HelloWorld6  HelloWorld6.h  HelloWorld6.nc  HelloWorld6.nc.tmp  HelloWorld7  HelloWorld7.nc  HelloWorld7.nc.tmp  HelloWorld8  HelloWorld8.nc  HelloWorld8.nc.tmp  HelloWorld9  HelloWorld9-2.nc  HelloWorld9-5  (+7 more)
conf13851.dir/: conf13851.file
iqos/: Makefile  Makefile.in  README.md  config.h  config.status  iqos  main.nc.out  neo-c.h.out
luckystrike/: Makefile  Makefile.in  config.status  luckystrike
mvi/: Makefile.in  TODO  config.status  configure  configure.in  main.nc  mvi.h  mvi.ncc  mvi2.h  mvi2.ncc
neo-vi/: Makefile.in  TODO  a.nc  a.txt  b.nc  config.status  configure  configure.in  neo-vi.h  neo-vi.nc  neo-vi01init.nc  neo-vi02base.nc  neo-vi03insert_mode.nc  neo-vi04word.nc  neo-vi05undo.nc  neo-vi06file.nc  neo-vi07yank.nc  neo-vi08visual.nc  neo-vi09search.nc  neo-vi10edit.nc  neo-vi11move.nc  neo-vi12command.nc  neo-vi13completion.nc  neo-vi14dot.nc  neo-vi15filer.nc  q
ploomtech/: Makefile  Makefile.in  configure  configure.in  ploomtech
self-host/: Makefile  Makefile.in  all_build.sh  ayataka  config.h  config.status  download_to_client.sh  home_all_build.sh  neo-c-string.nc  neo-c-string2.nc  neo-c-wstring.nc  neo-c.h.out  neo-c.nc  pre-neo-c.h  self-host  sevenstars  tiny  update_neo_c.sh  upload_to_server.sh  wi
sevenstar/: Makefile.in  configure
sevenstars/: AAA  ABC  Makefile  Makefile.in  README.md  TODO  a.c  aaa  aaaa  bbb  configure  configure.in  core.ss  memleak_debug.txt  neo-c.h.out  sevenstar  sevenstars.ss
src/: alignment.out  buffer.h  common.h  compiler.c  klass.c  llvm.cpp  llvm.dwo  llvm_common.hpp  macro.c  macro.cpp  memalloc-stdc.c  memalloc-stdc.c.bak  memalloc.c  node.cpp  node.dwo  node_alloc.c  node_block.cpp  node_block.dwo  node_type.c  parser-clang.c  parser-clang.c.bak  parser-neo-c.c  parser.c  preprocessor.c  sbrk.c  source_compiler.c  typedef.cpp  vtable.c
tiny/: 01init.nc  02base.nc  03mult.nc  03var.nc  04var.nc  05if.nc  05pop.nc  06string.nc  07fun.nc  Makefile  Makefile.in  README.md  TODO  a.c  a.nc  common.h  config.h  config.status  configure  configure.in  main.nc  test.ti  tiny  tiny.bc  tiny.h  tiny.ll  tiny.nc  tiny.nc.out  tiny01init.bc  tiny01init.ll  tiny01init.nc.out  tiny02base.bc  tiny02base.ll  tiny02base.nc  tiny02base.nc.out
tinyvm/: Makefile.in  TODO  a.c  a.txt  config.status  configure.in  tiny.h  tiny01init.nc  tiny02base.nc  update_tinyvm.sh
v++/: 01init.nc  02base.nc  03insert_mode.nc  04word.nc  05undo.nc  06file.nc  07yank.nc  08visual.nc  09search.nc  10edit.nc  11move.nc  12command.nc  13completion.nc  14dot.nc  15filer.nc  Makefile.in  configure  configure.in  v++.h  v++.nc
vi++/: 02base.nc  04word.nc  07yank.nc  08visual.nc  13completion.nc  14dot.nc  Makefile  Makefile.in  README.md  a.nc  config.h  config.status  configure  configure.in  neo-c.h.out  vi++  vi++.bc  vi++.h  vi++.ll  vi++.nc  vi++.nc.out  vi++01init.bc  vi++01init.ll  vi++01init.nc  vi++01init.nc.out  vi++02base.bc  vi++02base.ll  vi++02base.nc  vi++02base.nc.out  vi++03insert_mode.bc  vi++03insert_mode.ll  vi++03insert_mode.nc  vi++03insert_mode.nc.out  vi++04word.bc  vi++04word.ll  vi++04word.nc.out  (+40 more)
wi/: a  (+35 more)
(+241 files in other folders)
